# jats-ref-refinery

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: cache.py  enricher.py  http_utils.py  main.py  scoring.py  xml_handler.py
app/resolvers/: crossref.py  datacite.py  europepmc.py  openalex.py
tests/: test_resolver_crossref.py  test_resolver_datacite.py  test_resolver_europepmc.py  test_resolver_openalex.py  test_scoring.py  test_xml_handler.py
tests/fixtures/: sample.xml
