[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jats-ref-refinery"
version = "0.1.0"
description = "Enrich bibliographic references in JATS XML with PIDs"
requires-python = ">=3.12"
dependencies = [
    "lxml>=5.3.0",
    "httpx>=0.28.0",
    "rapidfuzz>=3.10.0",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
dev = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
